# onnx2cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  Model.onnx  cmake_install.cmake  vcpkg-configuration.json  vcpkg.json
Example/: LoopModel.onnx  fcn_model.onnx
TargetIncludes/Operators/: Add.h  ArgMin.h  Cast.h  Concat.h  Gemm.h  Identity.h  Pow.h  Sin.h  Sub.h
TargetIncludes/xflens/cxxblas/auxiliary/: complex.h  complex.tcc
TestInclude/: Makefile
TestInclude/Operators/: Abs.h  Add.h  ArgMax.h  ArgMin.h  Cast.h  Concat.h  Div.h  Elementwise.h  Equal.h  Erf.h  Expand.h  Gemm.h  Identity.h  MatMul.h  Mul.h  Neg.h  ReduceMean.h  Reshape.h  Shape.h  Sin.h  Slice.h  Softmax.h  Sqrt.h  Sub.h  Tanh.h  Transpose.h  Unsqueeze.h  Where.h
TestInclude/dcoInclude/Operators/: Abs.h  Add.h  ArgMax.h  ArgMin.h  Cast.h  Concat.h  Gemm.h  Greater.h  MatMul.h  Mul.h  Pow.h  Relu.h  Reshape.h  Shape.h  Sin.h  Sqr.h  Sub.h  Where.h
TestInclude/dcoInclude/include/: dco.hpp  dco_allocation_helper.hpp  dco_configuration.hpp  dco_global_includes.hpp  dco_inc.hpp  dco_inc_noet.hpp  dco_interoperability_boost_interval.hpp  dco_interoperability_eigen.hpp  dco_interoperability_eigen_spec.hpp  dco_logging.hpp  dco_std_compatibility.hpp  dco_vector.hpp  dco_vector_avx_operations.hpp  dco_vector_common.hpp  dco_vector_math.hpp  dco_vector_operations.hpp  dco_vector_traits.hpp  dco_version.hpp
TestInclude/dcoInclude/xflens/cxxblas/auxiliary/: complex.h
TestInclude/dcoInclude/xtl/: xtype_traits.hpp
onnx2cpp/: CMakeLists.txt  Makefile  cmake_install.cmake  onnx2cpp.cpp  onnx2cpp.h
src/: CMakeLists.txt  Main.cpp  OnnxConst.cpp  OnnxConst.h  OnnxConsts.cpp  OnnxConsts.h  OnnxGraph.cpp  OnnxGraph.h  OnnxNode.cpp  OnnxNode.h  OnnxNodes.cpp  OnnxNodes.h  OnnxTensor.cpp  OnnxTensor.h  OnnxVar.cpp  OnnxVar.h  OnnxVars.cpp  OnnxVars.h  Utils.cpp  Utils.h  cpp.hint  onnx2cpp.cpp  onnx2cpp.h
src/Operators/: ArgMax.cpp  ArgMax.h  ArgMin.cpp  Cast.cpp  Concat.cpp  Constant.cpp  ConstantOfShape.cpp  Div.h  Equal.cpp  Equal.h  Gemm.cpp  Gemm.h  Greater.cpp  Identity.h  Loop.cpp  Mul.h  Pow.cpp  Pow.h  Relu.h  Reshape.h  Shape.cpp  Sin.h  Slice.cpp  Tanh.h  Unsqeeze.cpp  Where.cpp  Where.h  add.h  sqr.h
test/: CMakeLists.txt  TestInitializer.cpp  TestMakeFileGenerator.cpp  dcoAdjointTestInitializer.cpp  dcoTangentTestInitializer.cpp  dcoTestInitializer.cpp
test/data/: InputDataGenerator.py
test/data/graph/test_Burgers_PINN/: model.onnx
test/data/graph/test_Burgers_PINN/test_data_set_0/: input_0.pb  input_1.pb  output_0.pb
test/data/graph/test_DHO_PINN/: model.onnx
test/data/graph/test_DHO_PINN/test_data_set_0/: input_0.pb  output_0.pb
test/data/graph/test_Heat_PINN/: model.onnx
test/data/graph/test_Heat_PINN/test_data_set_0/: input_0.pb  output_0.pb
test/data/graph/test_OperatorTests/: model.onnx
test/data/graph/test_OperatorTests/test_data_set_0/: input_0.pb  output_0.pb  output_1.pb  output_2.pb  output_3.pb  output_4.pb  output_5.pb
test/data/graph/test_PINN/: model.onnx
test/data/graph/test_PINN/test_data_set_0/: input_0.pb
test/data/graph/test_loopModel/: model.onnx
test/data/graph/test_loopModel/test_data_set_0/: input_0.pb  input_1.pb  input_2.pb  output_0.pb
xtl/: xtype_traits.hpp
